# gl3x

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ambient__light_8hpp_source.html  annotated.html  application__context_8hpp_source.html  arrow_8hpp_source.html  bounding__box_8hpp_source.html  bounding__plane_8hpp_source.html  bounding__sphere_8hpp_source.html  box3_8hpp_source.html  box__geometry_8hpp_source.html  camera_8hpp_source.html  camera__orbit_8hpp_source.html  camera__orthographic_8hpp_source.html  camera__perspective_8hpp_source.html  classengine_1_1AmbientLight-members.html  classengine_1_1AmbientLight.html  classengine_1_1AmbientLight__coll__graph.map  classengine_1_1AmbientLight__coll__graph.md5  classengine_1_1AmbientLight__inherit__graph.map  classengine_1_1AmbientLight__inherit__graph.md5  classengine_1_1ApplicationContext-members.html  classengine_1_1ApplicationContext.html  classengine_1_1ApplicationContext__coll__graph.map  classengine_1_1ApplicationContext__coll__graph.md5  classengine_1_1Arrow-members.html  classengine_1_1Arrow.html  classengine_1_1Arrow__coll__graph.map  classengine_1_1Arrow__coll__graph.md5  classengine_1_1Arrow__inherit__graph.map  classengine_1_1Arrow__inherit__graph.md5  classengine_1_1BoundingBox-members.html  classengine_1_1BoundingBox.html  classengine_1_1BoundingBox__coll__graph.map  classengine_1_1BoundingBox__coll__graph.md5  classengine_1_1BoundingBox__inherit__graph.map  classengine_1_1BoundingBox__inherit__graph.md5  classengine_1_1BoundingPlane-members.html  (+511 more)
demos/dinosaur/: CMakeLists.txt  dinosaur.cpp  dinosaur.hpp  game.cpp  game.hpp  ground.cpp  ground.hpp  main.cpp
engine/src/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
example/core/: window.cpp  window.h
examples/: CMakeLists.txt  example_flat_material.cpp  example_flat_material.hpp  example_geometries_plane.cpp  example_geometries_plane.hpp  example_geometries_sphere.cpp  example_geometries_sphere.hpp  example_light_directional.cpp  example_light_directional.hpp  example_light_point.cpp  example_light_point.hpp  example_lights_directional.cpp  example_lights_directional.hpp  example_lights_point.cpp  example_lights_point.hpp  example_lights_spot.cpp  example_lights_spot.hpp  example_material_flat.cpp  example_material_flat.hpp  example_material_phong.cpp  example_material_phong.hpp  example_materials_flat.cpp  example_materials_flat.hpp  example_materials_phong.cpp  example_materials_phong.hpp  example_phong_material.cpp  example_sandbox.cpp  example_sandbox.hpp  example_scene.hpp  examples.hpp  helpers.hpp  launcher_direct.cpp  launcher_runtime.cpp  main.cpp  main_runtime.cpp  ui_helpers.cpp  ui_helpers.hpp
examples/animation/: example_animated_transform.cpp  example_animated_transform.hpp
examples/assets/: bunny.msh  bunny_with_normals.msh  lps_head.msh  plane.msh  sprite.tex  sword.msh  sword.mtl
examples/debug/: frustum_culling_debug.cpp  frustum_culling_debug.hpp  lerp_animation_debug.cpp  lerp_animation_debug.hpp
examples/effects/: example_blending.cpp  example_blending.hpp  example_fog.cpp  example_fog.hpp
examples/geometries/: example_box_geometry.cpp  example_box_geometry.hpp  example_cone_geometry.cpp  example_cone_geometry.hpp  example_cylinder_geometry.cpp  example_cylinder_geometry.hpp  example_model_geometry.cpp  example_model_geometry.hpp  example_plane_geometry.cpp  example_plane_geometry.hpp  example_sphere_geometry.cpp  example_sphere_geometry.hpp
examples/lighting/: example_directional_light.cpp  example_directional_light.hpp  example_point_light.cpp  example_point_light.hpp  example_spot_light.cpp  example_spot_light.hpp
examples/lights/: example_directional_light.cpp  example_directional_light.hpp  example_point_light.cpp  example_point_light.hpp  example_spot_light.cpp  example_spot_light.hpp
examples/materials/: example_flat_material.cpp  example_flat_material.hpp  example_phong_material.cpp  example_phong_material.hpp  example_shader_material.cpp  example_shader_material.hpp  example_unlit_material.cpp  example_unlit_material.hpp
examples/meshes/: example_arbitrary_mesh.cpp  example_arbitrary_mesh.hpp  example_primitive_mesh.cpp  example_primitive_mesh.hpp
examples/rendering_effects/: example_blending.cpp  example_blending.hpp  example_fog.cpp  example_fog.hpp
examples/resources/: example_arrow_resource.cpp  example_arrow_resource.hpp  example_grid_resource.cpp  example_grid_resource.hpp
examples/sandbox/: example_sandbox.cpp  example_sandbox.hpp
examples/scene_features/: example_arrow_resource.hpp  example_debug_visuals.cpp  example_debug_visuals.hpp  example_frustum_culling.cpp  example_frustum_culling.hpp  example_grid_resource.cpp  example_grid_resource.hpp  example_mesh_instancing.cpp  example_mesh_instancing.hpp  example_model_loader.cpp  example_model_loader.hpp  example_primitives.cpp  example_primitives.hpp  example_sprite.cpp  example_sprite.hpp
examples/test/: example_frustum_culling_test.cpp  example_frustum_culling_test.hpp  example_lerp_animation_test.cpp  example_lerp_animation_test.hpp
src/: CMakeLists.txt  main.cpp
src/cameras/: camera.cpp  orbit_controls.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/core/: application.cpp  application_context.cpp  application_context_xyz.cpp  disposable.cpp  disposable.hpp  event.hpp  event_dispatcher.cpp  event_dispatcher.hpp  geometry.cpp  identity.hpp  image.cpp  image.hpp  imgui_integration.hpp  logger.cpp  logger.hpp  program_attributes.cpp  program_attributes.hpp  render_lists.cpp  render_lists.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.h  shader_library.cpp  shader_library.hpp  shared_context.cpp  timer.cpp  window.cpp  window.hpp  window_impl.cpp  window_impl.hpp
src/events/: event_dispatcher.hpp
src/geometries/: box_geometry.cpp  cone_geometry.cpp  cube_geometry.cpp  cylinder_geometry.cpp  geometry.cpp  plane_geometry.cpp  sphere_geometry.cpp  wireframe_geometry.cpp
src/geometry/: box_geometry.cpp  plane_geometry.cpp
src/importers/: obj_importer.cpp  (+1 more)
tests/: CMakeLists.txt  test_helpers.hpp
(+1085 files in other folders)
